Fix header not being fixed on Firefox

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -164,6 +164,11 @@ html[data-theme="dark"] {
   margin-block: 1rem;
 }
 
+/* Something adds position: relative only in the built app, not in the dev server! */
+#header {
+  position: fixed !important;
+}
+
 /* Stay monochrome for social icons. */
 .social-icons a {
   color: var(--sl-color-white);
